Add a test for misplaced drop down list in OOPIF-<webview> with offset form origin

This test is intended to catch regression such as the one reported in
https://crbug.com/772840.

To support the API required by the test the following chances to content layer
were required:
a) Add a helper class, RenderWidgetHostViewCocoaObserver to the public browser
test utils which internally overrides the corresponding RWHVCocoa's methods and
notifies the test observers accordingly.

b) The class object of RednerWidgetHostViewCocoa is exposed in a public method.
The class object is required for swizzling RWHVCococa methods.

Bug: 774986
Change-Id: I44a09a8d62868f2048f8c35c2c1c9d56e53dd5a6